--- a/FindMyMood.ipynb
+++ b/FindMyMood.ipynb
@@ -18,164 +18,34 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = pd.read_csv('text_emotion.csv')"
+    "data = pd.read_csv('Data/text_emotion.csv')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>tweet_id</th>\n",
-       "      <th>sentiment</th>\n",
-       "      <th>author</th>\n",
-       "      <th>content</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1956967341</td>\n",
-       "      <td>empty</td>\n",
-       "      <td>xoshayzers</td>\n",
-       "      <td>@tiffanylue i know  i was listenin to bad habi...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1956967666</td>\n",
-       "      <td>sadness</td>\n",
-       "      <td>wannamama</td>\n",
-       "      <td>Layin n bed with a headache  ughhhh...waitin o...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>1956967696</td>\n",
-       "      <td>sadness</td>\n",
-       "      <td>coolfunky</td>\n",
-       "      <td>Funeral ceremony...gloomy friday...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>1956967789</td>\n",
-       "      <td>enthusiasm</td>\n",
-       "      <td>czareaquino</td>\n",
-       "      <td>wants to hang out with friends SOON!</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>1956968416</td>\n",
-       "      <td>neutral</td>\n",
-       "      <td>xkilljoyx</td>\n",
-       "      <td>@dannycastillo We want to trade with someone w...</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "     tweet_id   sentiment       author  \\\n",
-       "0  1956967341       empty   xoshayzers   \n",
-       "1  1956967666     sadness    wannamama   \n",
-       "2  1956967696     sadness    coolfunky   \n",
-       "3  1956967789  enthusiasm  czareaquino   \n",
-       "4  1956968416     neutral    xkilljoyx   \n",
-       "\n",
-       "                                             content  \n",
-       "0  @tiffanylue i know  i was listenin to bad habi...  \n",
-       "1  Layin n bed with a headache  ughhhh...waitin o...  \n",
-       "2                Funeral ceremony...gloomy friday...  \n",
-       "3               wants to hang out with friends SOON!  \n",
-       "4  @dannycastillo We want to trade with someone w...  "
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "data.head()"
+    "#data.head()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 40000 entries, 0 to 39999\n",
-      "Data columns (total 4 columns):\n",
-      " #   Column     Non-Null Count  Dtype \n",
-      "---  ------     --------------  ----- \n",
-      " 0   tweet_id   40000 non-null  int64 \n",
-      " 1   sentiment  40000 non-null  object\n",
-      " 2   author     40000 non-null  object\n",
-      " 3   content    40000 non-null  object\n",
-      "dtypes: int64(1), object(3)\n",
-      "memory usage: 1.2+ MB\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "data.info()"
+    "#data.info()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "neutral       8638\n",
-       "worry         8459\n",
-       "happiness     5209\n",
-       "sadness       5165\n",
-       "love          3842\n",
-       "surprise      2187\n",
-       "fun           1776\n",
-       "relief        1526\n",
-       "hate          1323\n",
-       "empty          827\n",
-       "enthusiasm     759\n",
-       "boredom        179\n",
-       "anger          110\n",
-       "Name: sentiment, dtype: int64"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "data.sentiment.value_counts()"
+    "#data.sentiment.value_counts()"
    ]
   },
   {
@@ -257,33 +127,9 @@
    "cell_type": "code",
    "execution_count": 11,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "neutral       8638\n",
-       "worry         8459\n",
-       "happiness     5209\n",
-       "sadness       5165\n",
-       "love          3842\n",
-       "surprise      2187\n",
-       "fun           1776\n",
-       "relief        1526\n",
-       "hate          1323\n",
-       "empty          827\n",
-       "enthusiasm     759\n",
-       "boredom        179\n",
-       "anger          110\n",
-       "Name: sentiment, dtype: int64"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "data.sentiment.value_counts()"
+    "#data.sentiment.value_counts()"
    ]
   },
   {
@@ -311,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -334,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -347,80 +193,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['So',\n",
-       " 'great',\n",
-       " 'to',\n",
-       " 'see',\n",
-       " 'Oin',\n",
-       " '&amp;',\n",
-       " 'Cynthia.',\n",
-       " '',\n",
-       " 'So',\n",
-       " 'happy.',\n",
-       " '',\n",
-       " 'Dinner',\n",
-       " 'was',\n",
-       " 'great,',\n",
-       " 'cute',\n",
-       " 'little',\n",
-       " 'place.',\n",
-       " '',\n",
-       " 'Too',\n",
-       " 'bad',\n",
-       " 'Oin',\n",
-       " 'got',\n",
-       " 'sick',\n",
-       " 'afterwards.']"
-      ]
-     },
-     "execution_count": 54,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "happy_array[1]"
+    "#happy_array[1]"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 16,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['great',\n",
-       " 'see',\n",
-       " 'oin',\n",
-       " '&amp;',\n",
-       " 'cynthia.',\n",
-       " 'happy.',\n",
-       " 'dinner',\n",
-       " 'great,',\n",
-       " 'cute',\n",
-       " 'little',\n",
-       " 'place.',\n",
-       " 'bad',\n",
-       " 'oin',\n",
-       " 'get',\n",
-       " 'sick',\n",
-       " 'afterwards.']"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "happ_dat[1]"
+    "#happ_dat[1]"
    ]
   },
   {
@@ -527,25 +313,14 @@
    "cell_type": "code",
    "execution_count": 23,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "40000"
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "len(dataset)"
+    "#len(dataset)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -555,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -564,16 +339,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy is: 0.1318\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"Accuracy is:\", classify.accuracy(classifier, test_data))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -581,16 +364,16 @@
      "output_type": "stream",
      "text": [
       "Most Informative Features\n",
-      "                    bore = True           boredo : happy  =    180.7 : 1.0\n",
-      "                    hate = True             hate : happy  =    153.9 : 1.0\n",
-      "                   annoy = True            angry : neutra =    133.2 : 1.0\n",
-      "                   stuck = True           boredo : neutra =     87.6 : 1.0\n",
-      "                    mrs. = True           boredo : neutra =     81.1 : 1.0\n",
-      "                sooooooo = True           boredo : neutra =     81.1 : 1.0\n",
-      "                     wtf = True           boredo : neutra =     81.1 : 1.0\n",
-      "                 fifteen = True           boredo : neutra =     81.1 : 1.0\n",
-      "                   hell. = True           boredo : neutra =     81.1 : 1.0\n",
-      "                 sunday. = True            angry : neutra =     79.9 : 1.0\n",
+      "                    hate = True             hate : happy  =    132.0 : 1.0\n",
+      "                    bore = True           boredo : happy  =    127.7 : 1.0\n",
+      "                   stuck = True           boredo : neutra =     86.0 : 1.0\n",
+      "                  freeze = True            angry : neutra =     85.8 : 1.0\n",
+      "                  empire = True            angry : neutra =     85.8 : 1.0\n",
+      "                    age. = True            angry : neutra =     85.8 : 1.0\n",
+      "                 goooood = True            angry : neutra =     85.8 : 1.0\n",
+      "                   drove = True            angry : neutra =     85.8 : 1.0\n",
+      "                bullshit = True            angry : neutra =     85.8 : 1.0\n",
+      "                    wing = True            angry : neutra =     85.8 : 1.0\n",
       "None\n"
      ]
     }
@@ -601,38 +384,134 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
-    "custom_sentence = \"I failed \""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 96,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "custom_sentence = \"Let's party!\"\n",
     "custom_tokens = remove_noise(word_tokenize(custom_sentence))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Sentence: I failed  \n",
-      "Emotion: sad\n"
+      "Sentence: Let's party! \n",
+      "Emotion: fun\n"
      ]
     }
    ],
    "source": [
     "print('Sentence:',custom_sentence,'\\nEmotion:', classifier.classify(dict([token, True] for token in custom_tokens)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#from nltk.classify.scikitlearn import SklearnClassifier\n",
+    "#from sklearn.naive_bayes import MultinomialNB,BernoulliNB\n",
+    "#MNB_classifier = SklearnClassifier(MultinomialNB())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#MNB_classifier.train(train_data)\n",
+    "#print(\"MultinomialNB accuracy percent:\",classify.accuracy(MNB_classifier, test_data))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#BNB_classifier = SklearnClassifier(BernoulliNB())\n",
+    "#BNB_classifier.train(train_data)\n",
+    "#print(\"BernoulliNB accuracy percent:\",classify.accuracy(BNB_classifier, test_data))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#from sklearn.linear_model import LogisticRegression,SGDClassifier\n",
+    "#from sklearn.svm import SVC, LinearSVC, NuSVC"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#print(\"Original Naive Bayes Algo accuracy percent:\", (classify.accuracy(classifier, test_data))*100)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#LogisticRegression_classifier = SklearnClassifier(LogisticRegression(max_iter=500))\n",
+    "#LogisticRegression_classifier.train(train_data)\n",
+    "#print(\"LogisticRegression_classifier accuracy percent:\", (classify.accuracy(LogisticRegression_classifier, test_data))*100)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#SGDClassifier_classifier = SklearnClassifier(SGDClassifier())\n",
+    "#SGDClassifier_classifier.train(train_data)\n",
+    "#print(\"SGDClassifier_classifier accuracy percent:\", (classify.accuracy(SGDClassifier_classifier, test_data))*100)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#SVC_classifier = SklearnClassifier(SVC())\n",
+    "#SVC_classifier.train(train_data)\n",
+    "#print(\"SVC_classifier accuracy percent:\", (classify.accuracy(SVC_classifier, test_data))*100)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#LinearSVC_classifier = SklearnClassifier(LinearSVC())\n",
+    "#LinearSVC_classifier.train(train_data)\n",
+    "#print(\"LinearSVC_classifier accuracy percent:\", (classify.accuracy(LinearSVC_classifier, test_data))*100)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#print('Sentence:',custom_sentence,'\\nEmotion:', SVC_classifier.classify(dict([token, True] for token in custom_tokens)))"
    ]
   },
   {
